Fixed lead paragraph spacing.

--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -518,9 +518,7 @@ body {
 
 .main {
 
-   p{
-      font-size: 15px;
-   }
+   font-size: 15px;
 }
 
 /* Gallery Shortcode */
